--- a/index.html
+++ b/index.html
@@ -74,19 +74,19 @@
                 <div class="nav__container container">
                     <ul class="top-nav d-flex justify-content-center align-items-center">
                         <li class="top-nav__elem top-nav__elem_active">
-                            <a class="top-nav__link" href="#">Главная</a>
+                            <a class="top-nav__link" href="/">Главная</a>
                         </li>
                         <li class="top-nav__elem">
-                            <a class="top-nav__link" href="#">О компании</a>
+                            <a class="top-nav__link" href="#company">О компании</a>
                         </li>
                         <li class="top-nav__elem">
-                            <a class="top-nav__link" href="#">Сервисы</a>
+                            <a class="top-nav__link" href="#services">Сервисы</a>
                         </li>
                         <li class="top-nav__elem">
-                            <a class="top-nav__link" href="#">Работы</a>
+                            <a class="top-nav__link" href="#works">Работы</a>
                         </li>
                         <li class="top-nav__elem">
-                            <a class="top-nav__link" href="#">Контакты</a>
+                            <a class="top-nav__link" href="#contacts">Контакты</a>
                         </li>
                     </ul>
                 </div>
@@ -132,7 +132,7 @@
             </div>
         </section>
 
-        <section class="services">
+        <section class="services" id="services">
             <div class="container">
                 <div class="row flex-column services__head text-center">
                     <h3 class="caption">Мы предлагаем</h3>
@@ -312,7 +312,7 @@
             </div>
         </section>
 
-        <section class="about">
+        <section class="about" id="company">
             <div class="container">
                 <div class="row">
                     <div class="col-6 pr-0">
@@ -405,7 +405,7 @@
             </div>
         </section>
 
-        <section class="work">
+        <section class="work" id="works">
             <div class="container">
                 <div class="row justify-content-center">
                     <h2 class="label mb-4 text-center">Как мы работаем</h2>
@@ -456,7 +456,9 @@
             </div>
         </section>       
 
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2023.037096445998!2d30.079174316369826!3d59.53247398173044!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x0!2zNTnCsDMxJzU2LjkiTiAzMMKwMDQnNTIuOSJF!5e0!3m2!1sru!2sru!4v1623654890639!5m2!1sru!2sru" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>        
+        <section class="contacts" id="contacts">
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A18948d2e43586d2040ab7f16f9e27515011a734c1348e0fd5043e1aa0491c336&amp;source=constructor" width="100%" height="573" frameborder="0"></iframe>
+        </section>       
     </main>
 
     <footer class="footer">
