--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
             </div>
         </section>
 
-        <section class="about" id="company">
+        <section class="about d-none" id="company">
             <div class="container">
                 <div class="row">
                     <div class="col-6 pr-0">
