--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                                 <span class="service__caption">
                                     Компьютерная диагностика
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -163,7 +163,7 @@
                                 <span class="service__caption">
                                     Ремонт двигателей
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -178,7 +178,7 @@
                                 <span class="service__caption">
                                     Электрика
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -195,7 +195,7 @@
                                 <span class="service__caption">
                                     Слесарный ремонт / Ремонт ходовой части
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -210,7 +210,7 @@
                                 <span class="service__caption">
                                     Ремонт коробок передач
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -225,7 +225,7 @@
                                 <span class="service__caption">
                                     Проверка и регулировка углов сходимости
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -242,7 +242,7 @@
                                 <span class="service__caption">
                                     Замена масла
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -257,7 +257,7 @@
                                 <span class="service__caption">
                                     Техническая мойка
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -272,7 +272,7 @@
                                 <span class="service__caption">
                                     Общее техническое обслуживание
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
