--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                                 <span class="service__caption">
                                     Запасные части
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
@@ -302,7 +302,7 @@
                                 <span class="service__caption">
                                     Восстановление посадочных мест под подшипники/соосная расточка отверстий
                                 </span>
-                                <span class="service__text">
+                                <span class="service__text d-none">
                                     Равным образом управление и развитие структуры требует анализа экономической целесообразности принимаемых изменений.
                                 </span>
                             </div>
