--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
                 </div>
                 <div class="row mb-5">
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/diagnostic.svg" alt="">
                             </div>
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/repair.svg" alt="">
                             </div>
@@ -170,7 +170,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/ai.svg" alt="">
                             </div>
@@ -187,7 +187,7 @@
                 </div>
                 <div class="row mb-5">
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/car-service.svg" alt="">
                             </div>
@@ -202,7 +202,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/transmission.svg" alt="">
                             </div>
@@ -217,7 +217,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/suspension.svg" alt="">
                             </div>
@@ -234,7 +234,7 @@
                 </div>   
                 <div class="row mb-5">
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/petrol.svg" alt="">
                             </div>
@@ -249,7 +249,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/car-wash.svg" alt="">
                             </div>
@@ -264,7 +264,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/car.svg" alt="">
                             </div>
@@ -281,7 +281,7 @@
                 </div>    
                 <div class="row">
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon">
                                 <img src="images/service-icons/monitoring-test.svg" alt="">
                             </div>
@@ -296,7 +296,7 @@
                         </div>
                     </div>
                     <div class="col-4">
-                        <div class="services__item service d-flex">
+                        <div class="services__item service d-flex align-items-center">
                             <div class="service__icon"></div>
                             <div class="service__description">
                                 <span class="service__caption">
