--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                             <a class="top-nav__link" href="/">Главная</a>
                         </li>
                         <li class="top-nav__elem">
-                            <a class="top-nav__link" href="#company">О компании</a>
+                            <a class="top-nav__link" href="#company">О нас</a>
                         </li>
                         <li class="top-nav__elem">
                             <a class="top-nav__link" href="#services">Сервисы</a>
