--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
         </section>       
 
         <section class="contacts" id="contacts">
-            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A18948d2e43586d2040ab7f16f9e27515011a734c1348e0fd5043e1aa0491c336&amp;source=constructor" width="100%" height="686" frameborder="0"></iframe>
+            <iframe src="https://yandex.ru/map-widget/v1/?um=constructor%3A18948d2e43586d2040ab7f16f9e27515011a734c1348e0fd5043e1aa0491c336&amp;source=constructor&amp;scroll=false" width="100%" height="686" frameborder="0"></iframe>
         </section>       
     </main>
 
